# jan-diddy

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: deploy.yml
app/: main.py
app/community/: models.py
app/community/handlers/: admin.py  chat.py  events.py  fun.py  info.py
app/community/services/: jokes.py  predictions.py  warnings.py  weather.py
app/core/: application.py  bot.py  config.py  db.py  http.py  llm.py  logger.py  postgres.py  redis.py
app/db/: __init__.py  postgres.py
app/handlers/: __init__.py  admin.py  chat.py  events.py  fun.py  info.py
app/models/: __init__.py  bot_replies.py  jokes.py  messages.py  predictions.py  successful_dialogs.py  warnings.py
app/persona/: lexicon.json  models.py  profiles.py  rendering.py  scheduler.py  state.py
app/persona/client/: __init__.py  base.py  dossier.py  health.py  memory.py  react.py  reply.py  vision.py
app/persona/handlers/: listener.py  reactions.py
app/persona/orchestrator/: __init__.py  addressing.py  dossier.py  flow.py  formatting.py  ingest.py  media.py  payload.py  reaction.py
app/persona/scoring/: __init__.py  flywheel.py  keys.py  rules.py
app/services/: __init__.py  jokes.py  predictions.py  warnings.py
app/utils/: decorators.py  typing.py
docs/: persona-contract.md
migrations/models/: 0_20251213014501_init.py  0_20260514230445_init.py  1_20251213021033_update.py  1_20260706052219_add_schemas_and_llm_models.py  2_20251213112714_update.py  2_20260707082815_add_user_profiles.py  3_20260707090000_add_pgvector.py  4_20260710120000_enrich_successful_dialogs.py  5_20260710130000_add_user_notes.py  6_20260713172937_add_dialog_labels.py
tests/: conftest.py  test_filters.py  test_fun.py  test_persona_and_fun.py  test_rendering_parity.py  test_services.py  test_triggers_scoring.py
(+8 files in other folders)
