[tool.poetry]
name = "jan-diddy"
version = "6.5.1"

description = "Telegram bot with Tortoise ORM"
authors = ["bromscandium"]
readme = "README.md"

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = "^3.13"
python-telegram-bot = {version = "22.5", extras = ["webhooks"]}
apscheduler = "^3.11.1"
python-dotenv = "^1.2.1"
aiohttp = "3.13.2"
tortoise-orm = "^0.25.1"
aerich = "^0.9.2"
asyncpg = "^0.31.0"
pydantic-settings = "^2.12"
loguru = "^0.7.3"
confusables = "^1.2.0"
redis = "^5.2.0"

[tool.aerich]
tortoise_orm = "app.core.postgres.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "polyfactory (>=3.3.0,<4.0.0)"
]
